--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
       dockerfile: ./php/Dockerfile
     volumes:
       - ./src:/var/www/html
-  # web:
-  #   name: dev_web
-  #   image: nginx:latest
-  #   ports:
-  #     - "80:8080"
-  #   volumes:
-  #     - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-  #     - ./src:/var/www/html
+  web:
+    name: dev_web
+    image: nginx:latest
+    ports:
+      - "80:8080"
+    volumes:
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./src:/var/www/html
