--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,7 +14,7 @@ server {
 	}
 	
 	location ~ \.php$ {
-		fastcgi_pass php:9000;
+		fastcgi_pass dev_php:9000;
 		fastcgi_index index.php;
 		fastcgi_param REQUEST_METHOD $request_method;
 		fastcgi_param SCRIPT_FILENAME $request_filename;
