--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -15,7 +15,14 @@ RUN docker-php-ext-install pdo pdo_pgsql pgsql
 # enable opcache
 RUN docker-php-ext-enable opcache
 
-COPY php/config/opcache.ini /usr/local/etc/php/conf.d/
+RUN apk add --no-cache \
+       $PHPIZE_DEPS \
+       linux-headers \
+       && pecl install xdebug \
+       && docker-php-ext-enable xdebug \
+       && apk del $PHPIZE_DEPS linux-headers
+
+# COPY docker/php/config/*.ini /usr/local/etc/php/conf.d/
 
 EXPOSE 9000
 
